Refactor code: Remove unused functions and update CSS styles

--- a/TODOLIST/index.html
+++ b/TODOLIST/index.html
@@ -35,7 +35,7 @@
         <div class="OldUsrViewDefault">
             <div class="menuBarContainer">
                 <div class="menuBar">
-                    <div class="navbar">
+                    <div class="navbar toAreaOFCL">
                         <div class="cateTitle">
                             <div class="toBeHiddenAfterCollapse">
                                 <p>Categories</p>
@@ -43,7 +43,7 @@
                             <span class="material-symbols-rounded"> menu</span>
                         </div>
 
-                        <div class="toBeHiddenAfterCollapse">
+                        <div class="toBeHiddenAfterCollapse listOfCategoriesParent">
                             <div class="listOfCategories"></div>
                         </div>
                         <div class="toBeHiddenAfterCollapse">
@@ -147,6 +147,16 @@
                 </div>
                 <div class="warningAreaOTE"></div>
             </form>
+        </div>
+    </div>
+    <div class="popup-container-parent mainModal" hidden>
+        <div class="popup-container">
+                <div class="popup-container-parent-min-content">
+                    <div class="popup-container-min-rename-section">
+                    </div>
+                    <div class="popup-container-min">
+                    </div>
+                </div>
         </div>
     </div>
 </body>
