--- a/TODOLIST/index.html
+++ b/TODOLIST/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Task Management System</title>
+    <title>Todozen Pro</title>
     <link rel="stylesheet" href="./CSS/todo.css">
     <link rel="stylesheet" href="./CSS/customSelect.css">
     <link rel="stylesheet" href="./CSS/mobileui.css">
