Add toast functionality for success messages

--- a/TODOLIST/index.html
+++ b/TODOLIST/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="./CSS/customSelect.css">
     <link rel="stylesheet" href="./CSS/mobileui.css">
     <link rel="stylesheet" href="./CSS/todoExpand.css">
+    <link rel="stylesheet" href="./CSS/toast.css">
     <link rel="stylesheet" href="./CSS/sidebar.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
     <link rel="stylesheet"
@@ -159,15 +160,18 @@
                 </div>
         </div>
     </div>
+    <div id="toast-container"></div>
 </body>
 <script src="./JS/todoExpand.js"></script>
 <script src="./JS/main.js"></script>
 <script src="./JS/ListLoader.js"></script>
 <script src="./JS/newOold.js"></script>
+<script src="./JS/toast.js"></script>
 <script src="./JS/categoryhandle.js"></script>
 <script src="./JS/logout.js"></script>
 <script src="./JS/handleAddNewPre.js"></script>
 <script src="./JS/handleNoListMsg.js"></script>
 <script src="./JS/handleSideBarToggle.js"></script>
+
 
 </html>
