Mobile UI designed

--- a/TODOLIST/index.html
+++ b/TODOLIST/index.html
@@ -168,6 +168,12 @@
     </div>
     <div id="toast-container"></div>
     <div class="versionInfo"></div>
+    <div class="forMobile" hidden>
+        <div class="innerForMob">
+            <button class="btnMobileMenu" onclick="handleToggleSidebar(`mobile`)"><span class="material-symbols-outlined mobile-three-dot">menu</span></button>
+            <div class="tOfMob"><h3>Todozen Pro</h3></div>
+        </div>
+    </div>
 </body>
 <script src="./JS/todoExpand.js"></script>
 <script src="./JS/main.js"></script>
