--- a/genderGuesser.html
+++ b/genderGuesser.html
@@ -20,23 +20,7 @@
 </head>
 
 <body>
-    <div id="navbar">
-        <nav>
-            <div class="logo">Gaurab Dhakal</div>
-            <input type="checkbox" id="click" />
-            <label for="click" class="menu-btn">
-                <i class="fas fa-bars"></i>
-            </label>
-              <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="CountryPredictor.html" >Country Predictor</a></li>
-                <li><a href="genderGuesser.html"  class="active">Gender Predictor</a></li>
-                <li><a href="youtubeDislikeReturn.html" >Youtube Dislike Return</a></li>
-                <li><a href="weather.html" >Weather Checker</a></li>
-                <li><a href="TODOLIST/index.html" >Todo-List</a></li>
-            </ul>
-        </nav>
-    </div>
+    <div id="navbarContainer"></div>
     <div id="container">
         <h2 align="center" style="margin-bottom: 10px;">Gender Predictor</h2>
         <br />
@@ -62,15 +46,6 @@
 </body>
 <script src="./JS/gender_guesser.js"></script>
 <script src="./JS/buttonTransform.js"></script>
-
-<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-HLH5Q0M1F5"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-HLH5Q0M1F5');
-</script>
+<script src="./JS/navloader.js"></script>
 
 </html>
