--- a/index.html
+++ b/index.html
@@ -33,23 +33,7 @@
 <link rel="stylesheet" href="./CSS/universalFontFamily.css">
 
 <body>
-    <div id="navbar">
-        <nav>
-            <div class="logo">Gaurab Dhakal</div>
-            <input type="checkbox" id="click" />
-            <label for="click" class="menu-btn">
-                <i class="fas fa-bars"></i>
-            </label>
-            <ul>
-                <li><a href="#" class="active">Home</a></li>
-                <li><a href="CountryPredictor.html">Country Predictor</a></li>
-                <li><a href="genderGuesser.html">Gender Predictor</a></li>
-                <li><a href="passwordGenerator.html">Password Generator</a></li>
-                <li><a href="weather.html" >Weather Checker</a></li>
-                <li><a href="TODOLIST/index.html" >Todo-List</a></li>
-            </ul>
-        </nav>
-    </div> 
+    <div id="navbarContainer"></div>
     <br />
     <br />
     <div class="forMobDivCalc">
@@ -143,4 +127,5 @@
 </body>
 <script src="./JS/index._main.js" type="text/javascript"></script>
 <script src="./JS/calcv3.js"></script>
+<script src="./JS/navloader.js"></script>
 </html>
