--- a/weather.html
+++ b/weather.html
@@ -23,23 +23,7 @@
 </head>
 
 <body>
-    <div id="navbar">
-        <nav>
-            <div class="logo">Gaurab Dhakal</div>
-            <input type="checkbox" id="click" />
-            <label for="click" class="menu-btn">
-                <i class="fas fa-bars"></i>
-            </label>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="CountryPredictor.html">Country Predictor</a></li>
-                <li><a href="genderGuesser.html">Gender Predictor</a></li>
-                <li><a href="youtubeDislikeReturn.html">Youtube Dislike Return</a></li>
-                <li><a href="#" class="active">Weather Checker</a></li>
-                <li><a href="TODOLIST/index.html" >Todo-List</a></li>
-            </ul>
-        </nav>
-    </div>
+    <div id="navbarContainer"></div>
 <div class="containerWeatherPageParent">
     <div class="container containerWeatherPageBody">
         <h3>Weather Checker</h3>
@@ -68,4 +52,5 @@
 </body>
 <script src="./JS/weather.js"></script>
 <script src="./JS/buttonTransform.js"></script>
+<script src="./JS/navloader.js"></script>
 </html>
