--- a/ria_result.html
+++ b/ria_result.html
@@ -16,22 +16,7 @@
         <link rel="stylesheet" href="/CSS/universalFontFamily.css">
 </head>
 <body>
-    <div id="navbar">
-        <nav>
-            <div class="logo">Gaurab Dhakal</div>
-            <input type="checkbox" id="click" />
-            <label for="click" class="menu-btn">
-                <i class="fas fa-bars"></i>
-            </label>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="CountryPredictor.html">Country Predictor</a></li>
-                <li><a href="genderGuesser.html">Gender Predictor</a></li>
-                <li><a href="ria_result.html" class="active">RIA Result Checker</a></li> 
-                <li><a href="youtubeDislikeReturn.html" >Youtube Dislike Return</a></li>
-            </ul>
-        </nav>
-    </div>
+    <div id="navbarContainer"></div>
     <div class="history" id="history" hidden>
         <button type="button" onclick="goBack()">Go Back</button>
         <button type="button" onclick="clearHistory()">Clear History</button><br />
@@ -81,5 +66,6 @@
     </div>
 </body>
 <script src="JS/ria.js"></script>
+<script src="JS/navloader.js"></script>
 
 </html>
