--- a/TODOLIST/index.html
+++ b/TODOLIST/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="./CSS/customSelect.css">
     <link rel="stylesheet" href="./CSS/mobileui.css">
     <link rel="stylesheet" href="./CSS/todoExpand.css">
+    <link rel="stylesheet" href="./CSS/editHistory.css">
     <link rel="stylesheet" href="./CSS/toast.css">
     <link rel="stylesheet" href="./CSS/sidebar.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
@@ -16,8 +17,10 @@
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@24,500,1,-25" />
-        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
-        <body>
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
+
+<body>
     <div class="newViewExtraLayer" id="newUsrView" hidden>
         <div class="newUsrView">
             <form class="newUsrView newUsrForm">
@@ -27,7 +30,8 @@
                     <input type="submit" value="Login">
                 </div>
                 <p class="warningAreaN"></p>
-                <p class="infoOfStorage">Note: Everything is stored locally so clearing browser's data will cause in the complete data loss!</p>
+                <p class="infoOfStorage">Note: Everything is stored locally so clearing browser's data will cause in the
+                    complete data loss!</p>
             </form>
         </div>
     </div>
@@ -73,9 +77,11 @@
                                                 edit
                                             </span>
                                         </div>
-                                        <div class="nameOfSetting"><p class="nameOfSettingP">Change name</p></div>
+                                        <div class="nameOfSetting">
+                                            <p class="nameOfSettingP">Change name</p>
+                                        </div>
                                     </div>
-                            </div>
+                                </div>
                             </div>
                             <button class="btnTypeB" id="logoutBtn">Logout</button>
                         </div>
@@ -88,46 +94,48 @@
             </div>
             <div class="categoryShowSection"></div>
             <div class="MainAllParent">
-                
-            <div class="MainAll">
-                <h1 class="headTitle">{head title here}</h1>
-                <div class="preAddSectionParent">
-                    <div class="preAddSection">
-                        <p>Add task</p>
-                        <button id="preAddBtn"><span class="material-symbols-outlined">
-                                add_task
-                            </span></button>
-                    </div>
-                </div>
-                <div class="formParent" hidden>
-                    <form class="formMain">
-                        <input type="text" id="usrVal" autocomplete="off" placeholder="Add a task..." maxlength="80"/>
-                        <div class="afterUsrInp">
-                            <div class="categorySelectOption"></div>
-                            <div class="btnsAddTask">
-                                <button type="button" id="btnCancel" class="cancel btnTypeC">Close</button>
-                                <button id="btnAdd" type="submit" class="add btnTypeB">Add Task</button>
-                            </div>
+
+                <div class="MainAll">
+                    <h1 class="headTitle">{head title here}</h1>
+                    <div class="preAddSectionParent">
+                        <div class="preAddSection">
+                            <p>Add task</p>
+                            <button id="preAddBtn"><span class="material-symbols-outlined">
+                                    add_task
+                                </span></button>
                         </div>
-                    </form>
-                </div>
-                <div class="warning" hidden></div>
-                <p class="totalTaskCount"></p>
-                <div id="listArea"></div>
-                <div class="delAllSec"></div>
-                <div id="noListMessage">
-                    <div class="noListMessage">
+                    </div>
+                    <div class="formParent" hidden>
+                        <form class="formMain">
+                            <input type="text" id="usrVal" autocomplete="off" placeholder="Add a task..."
+                                maxlength="80" />
+                            <div class="afterUsrInp">
+                                <div class="categorySelectOption"></div>
+                                <div class="btnsAddTask">
+                                    <button type="button" id="btnCancel" class="cancel btnTypeC">Close</button>
+                                    <button id="btnAdd" type="submit" class="add btnTypeB">Add Task</button>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+                    <div class="warning" hidden></div>
+                    <p class="totalTaskCount"></p>
+                    <div id="listArea"></div>
+                    <div class="delAllSec"></div>
+                    <div id="noListMessage">
+                        <div class="noListMessage">
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
         </div>
     </div>
     <div class="newCateFormParentElem" hidden>
         <div class="AddCategoryPopUP">
             <form id="newCategoryForm" onsubmit="handleNewCateSubmission(event)">
                 <h4 class="titleOfNewCategory">Category name: </h4>
-                <input type="text" id="cateName" minlength="3" maxlength="60" autocomplete="off" placeholder="Enter name of the category" />
+                <input type="text" id="cateName" minlength="3" maxlength="60" autocomplete="off"
+                    placeholder="Enter name of the category" />
                 <div class="btnsCate">
                     <input type="button" id="cateCancelBtn" value="Cancel" />
                     <input type="submit" id="cateAddBtn" value="Add" />
@@ -141,7 +149,7 @@
             <form class="mainExpandedForm">
                 <div class="titleMainEF">Edit Todo</div>
                 <div class="mainInpArea">
-                    <input type="text" class="todoContentInInput whenReadOnly" value="this is a dd" readonly/>
+                    <input type="text" class="todoContentInInput whenReadOnly" value="this is a dd" readonly />
                     <span class="material-symbols-outlined editTypeBorderColor">edit</span>
                 </div>
                 <div class="tECEBandSelect">
@@ -151,33 +159,53 @@
                         <button type="Submit" class="subBtnMain">Save</button>
                     </div>
                 </div>
+                <div class="showEditHistory">
+                    <button type="button" class="showEditHistoryBtn">View Edit History</button>
+                </div>
                 <div class="warningAreaOTE"></div>
             </form>
         </div>
-        
+
     </div>
     <div class="popup-container-parent mainModal" hidden>
         <div class="popup-container">
-                <div class="popup-container-parent-min-content">
-                    <div class="popup-container-min-rename-section">
-                    </div>
-                    <div class="popup-container-min">
-                    </div>
+            <div class="popup-container-parent-min-content">
+                <div class="popup-container-min-rename-section">
                 </div>
+                <div class="popup-container-min">
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="parentEditHistoryPopup" hidden>
+        <div class="popupContainerEditHistory">
+            <div class="editHistoryWrapper">
+                <span class="closeButton" onclick="toggleEditHistory()">&times;</span>
+                <div class="editHistory">
+                    <div class="headerArea">
+                        <h3 class="ehTitle">Previous Versions</h3>
+                    </div>
+                    <div class="historyArea"></div>
+                </div>
+            </div>
         </div>
     </div>
     <div id="toast-container"></div>
     <div class="versionInfo"></div>
     <div class="forMobile" hidden>
         <div class="innerForMob">
-            <button class="btnMobileMenu" onclick="handleToggleSidebar(`mobile`)"><span class="material-symbols-outlined mobile-three-dot">menu</span></button>
-            <div class="tOfMob"><h3>Todozen Pro</h3></div>
+            <button class="btnMobileMenu" onclick="handleToggleSidebar(`mobile`)"><span
+                    class="material-symbols-outlined mobile-three-dot">menu</span></button>
+            <div class="tOfMob">
+                <h3>Todozen Pro</h3>
+            </div>
         </div>
     </div>
 </body>
 <script src="./JS/todoExpand.js"></script>
 <script src="./JS/main.js"></script>
 <script src="./JS/ListLoader.js"></script>
+<script src="./JS/editHistory.js"></script>
 <script src="./JS/newOold.js"></script>
 <script src="./JS/toast.js"></script>
 <script src="./JS/categoryhandle.js"></script>
