Add favicon to the TODO list page

--- a/TODOLIST/index.html
+++ b/TODOLIST/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="./CSS/editHistory.css">
     <link rel="stylesheet" href="./CSS/toast.css">
     <link rel="stylesheet" href="./CSS/sidebar.css">
+    <link rel="shortcut icon" href="./assests/checklist.png" type="image/png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
