Add loader CSS and JS files

--- a/TODOLIST/index.html
+++ b/TODOLIST/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="./CSS/todo.css">
     <link rel="stylesheet" href="./CSS/customSelect.css">
     <link rel="stylesheet" href="./CSS/popupForTheme.css">
+    <link rel="stylesheet" href="./CSS/loader.css">
     <link rel="stylesheet" href="./CSS/mobileui.css">
     <link rel="stylesheet" href="./CSS/todoExpand.css">
     <link rel="stylesheet" href="./CSS/editHistory.css">
@@ -227,6 +228,9 @@
         </div>
     </div>
 </body>
+<div class="loader-container">
+    <div class="loader"></div>
+</div>
 <script src="./JS/handleNoListMsg.js"></script>
 <script src="./JS/todoExpand.js"></script>
 <script src="./JS/toggleTheme.js"></script>
