--- a/TODOLIST/index.html
+++ b/TODOLIST/index.html
@@ -231,6 +231,12 @@
 <div class="loader-container">
     <div class="loader"></div>
 </div>
+<script>
+    window.addEventListener('load', function() {
+    const loader = document.querySelector('.loader-container');
+    loader.style.display = 'none'; 
+});
+</script>
 <script src="./JS/handleNoListMsg.js"></script>
 <script src="./JS/todoExpand.js"></script>
 <script src="./JS/toggleTheme.js"></script>
