--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
     rel="stylesheet" />
     <title>Gaurab Dhakal</title>
-    <script src="./JS/navloader.js"></script>
+    <script async src="./JS/navloader.js"></script>
 </head>
 <style>
     nav{
