--- a/weather.html
+++ b/weather.html
@@ -28,7 +28,8 @@
     <div class="container containerWeatherPageBody">
         <h3>Weather Checker</h3>
         <form class="weatherForm">
-            <input type="text" class="usrInp" placeholder="Enter the city" />
+            <input type="text"
+            autocomplete="off" class="usrInp" placeholder="Enter the city" />
             <button type="submit" class="mainBtn btnTypeA"  onmousedown="btnSize(true,`.mainBtn`)"
             onmouseup="btnSize(false,`.mainBtn`)" 
             onmouseleave="btnSize(false,`.mainBtn`)">Search</button>
