--- a/genderGuesser.html
+++ b/genderGuesser.html
@@ -25,7 +25,8 @@
         <h2 align="center" style="margin-bottom: 10px;">Gender Predictor</h2>
         <br />
         <div>
-            <input type="text" id="name" placeholder="Enter the first name here! " />
+            <input type="text"
+            autocomplete="off" id="name" placeholder="Enter the first name here! " />
             <button type="button" onclick="guessTheGender()" class="btnTransform btnTypeA" onmousedown="btnSize(true,`.btnTransform`)"
             onmouseup="btnSize(false,`.btnTransform`)" 
             onmouseleave="btnSize(false,`.btnTransform`)">Predict</button>
