Update YouTube video ID extraction logic and fix label text in youtubeDislikeReturn.html

--- a/youtubeDislikeReturn.html
+++ b/youtubeDislikeReturn.html
@@ -26,7 +26,7 @@
         <h2 align="center" style="margin-bottom: 15px;">Youtube Dislike Return</h2>
         <br />
         <div>
-            <label for="name">Enter Video ID :</label><br>
+            <label for="name">Enter Video ID or Link :</label><br>
             <input type="text" id="name" placeholder="Enter video id here!!! " />
             <button type="button" class="btnTransform btnTypeA" onmousedown="btnSize(true,`.btnTransform`)"
             onmouseup="btnSize(false,`.btnTransform`)" 
@@ -38,10 +38,7 @@
             </div>  
         </div>
         <p id="output"></p>
-        <p align="center" id="warning">
-            Guide -> ID of a video is: For example <br> "<b><a rel="noopener" href="https://www.youtube.com/watch?v=kxOuG8jMIgI" target="_blank">https://www.youtube.com/watch?v=kxOuG8jMIgI</a></b>" <br> in this
-            link "<b>kxOuG8jMIgI</b>" is
-            the ID.
+        <p id="warning">
         </p>
     </div>
     <div class="footer">
