--- a/index.html
+++ b/index.html
@@ -1,131 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" href="/Assests/logo.png" type="image/x-icon">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
-    rel="stylesheet" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gaurab Dhakal</title>
-    <script async src="./JS/navloader.js"></script>
+    <link rel="stylesheet" href="./CSS/homepage.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    
 </head>
-<style>
-    nav{
-        font-family: "Open Sans",sans-serif;
-    }
-    body {
-        background: fixed;
-        background-size: 100% 100%;
-        background-color: rgb(18, 25, 35);
-        /* background-image: url("./Assests/bgImg.jpg"); */
-    }
-</style>
-<link rel="stylesheet" href="./CSS/index.css" />
-<link rel="stylesheet" href="./CSS/navbar.css" />
-<link rel="stylesheet" media='screen and (max-width: 699px)' href="./CSS/calcMobileDesign.css" />
-<link rel="stylesheet" href="./CSS/footer.css">
-<link rel="stylesheet" href="./CSS/calcv3.css">
-<link rel="stylesheet" href="./CSS/buttons.css">
-<link rel="stylesheet" href="./CSS/universalFontFamily.css">
-
 <body>
-    <div id="navbarContainer"></div>
-    <br />
-    <br />
-    <div class="forMobDivCalc">
-        <div id="divcalculator">
-            <h2 class="selectCalcH2">Select the version!</h2>
-            <div>
-                <button type="button" class="toggle v1 btnTypeA" onclick="calc2()">
-                    Calculator V.1
-                </button>
-                <button type="button" class="toggle btnTypeA hideShowToggle" onclick="toggle(`.calculator`,`.hideShowToggle`,`.hideShowToggle2`)">
-                    Calculator V.2
-                </button>
-                <button type="button" class="toggle btnTypeA hideShowToggle2"
-                onclick="toggle(`.MainCalcBody1`,`.hideShowToggle2`,`.hideShowToggle`)">
-                Calculator V.3
-            </button>
-            </div>
-            <form>
-                <!-- Calculator Version 2 starts -->
-                <div class="calculator" hidden>
-                    <h2 id="heading">Calculator V.2</h2>
-                    <label>Number 1: </label>
-                    <input type="number" id="usrinp_1" placeholder="Enter Your Number" minlength="1"
-                        onkeydown="nextElem(event,'usrinp_2')" /><br />
-                    <label>Number 2: </label>
-                    <input type="number" id="usrinp_2" placeholder="Enter Your Number" minlength="1" /><br />
-                    <label>Operator: </label>
-                    <select id="operator">
-                        <option value="+">+</option>
-                        <option value="-">-</option>
-                        <option value="*">*</option>
-                        <option value="/">/</option>
-                    </select>
-                    <br />
-                    <span class="buttonsArea">
-                        <button type="button" class="hideUponClick btnTypeA" onclick="giveOutput()">Calculate</button>
-                        <button type="reset" class="hideUponClick btnTypeA" onclick="clearOTA()">Reset</button></span>
-            </form>
-            <br />
-            <p id="outputhere"></p>
-        </div>
-        <!-- Calculator Version 2 ends -->
-
-        <!-- Calculator Version 3 Starts  -->
-        <div class="MainCalcBody1" hidden>
-            <div class="MainCalcBody" hidden>
-                <h3>Calculator V3</h3>
-                <div class="inputOutput">
-                    <input type="text" readonly>
-                </div>
-                <div class="calcBody">
-                    <div class="row row-1">
-                        <div class="column column-1 column-1-1">7</div>
-                        <div class="column column-2 column-2-1">4</div>
-                        <div class="column column-3 column-3-1">1</div>
-                        <div class="column column-4 column-4-1">0</div>
-                    </div>
-                    <div class="row row-2">
-                        <div class="column column-1 column-1-2">8</div>
-                        <div class="column column-2 column-2-2">5</div>
-                        <div class="column column-3 column-3-2">2</div>
-                        <div class="column column-4 column-4-2">.</div>
-                    </div>
-                    <div class="row row-3">
-                        <div class="column column-1 column-1-3">9</div>
-                        <div class="column column-2 column-2-3">6</div>
-                        <div class="column column-3 column-3-3">3</div>
-                        <div class="column column-4 column-4-3">B</div>
-                    </div>
-                    <div class="row row-4">
-                        <div class="column column-1 column-1-4">DEL</div>
-                        <div class="column column-2 column-2-4">×</div>
-                        <div class="column column-3 column-3-4">+</div>
-                        <div class="column column-4 column-4-4">Ans</div>
-                    </div>
-                    <div class="row row-5">
-                        <div class="column column-1 column-1-5">AC</div>
-                        <div class="column column-2 column-2-5">÷</div>
-                        <div class="column column-3 column-3-5">-</div>
-                        <div class="column column-4 column-4-5"> = </div>
+    <section class="navbarSection">
+    <nav class="navbar">
+        <div class="logo">Gaurab Dhakal</div>
+        <ul>
+            <li><a href="#" class="active">Home</a></li>
+            <li><a href="./CountryPredictor.html">Country Predictor</a></li>
+            <li><a href="./genderGuesser.html">Gender Predictor</a></li>
+            <li><a href="./passwordGenerator.html">Password Generator</a></li>
+            <li id="dropDownMain" class="downDownMain">
+                <a href="#" class="dropDown">
+                    More
+                    <span class="material-symbols-outlined">
+                    arrow_drop_down
+                    </span>
+                </a>
+                <div class="dropdownContent" hidden>
+                    <div class="dropDownMainContent">
+                        <a href="./TODOLIST/index.html">Todo List</a>
+                        <a href="./weather.html">Weather Checker</a>
+                        <a href="./youtubeDislikeReturn.html">Youtube Dislike Checker</a>
                     </div>
                 </div>
-            </div>
-        </div>
-        <div class="notice">New revamped frontpage is coming soon!</div>
+            </li>
+        </ul>
+    
+    </nav>
+</section>
+<div class="main">
+    <div class="mainContent">
+        <div class="intro"></div>
+        <div class="mySkills"></div>
+        <div class="projects"></div>
+        <div class="conclusion"></div>
     </div>
+    <div class="graphics">
+        <img src="./Assests/cp.png" alt="Img" class="imagesGraphics">
+        <img src="./Assests/gp.png" height="300" width="200" alt="Img" class="imagesGraphics">
+        <img src="./Assests/cp.png" height="300" width="200" alt="Img" class="imagesGraphics">
     </div>
-    <div class="footer Index">
-        <p>Gaurab Dhakal &copy; 2024</p>
-    </div>
+</div>
+<section class="themeSelectionSection">
+    <fieldset>
+        <legend>Color Schemes   </legend>
+        <label for="theme">Choose a theme: </label>
+        <select name="theme" id="theme">
+            <option value="light" id="light">Light</option>
+            <option value="dark" id="dark">Dark</option>
+        </select>
+    </fieldset>
+</section>
+<script src="./JS/homepage.js"></script>
+<div class="footer">Gaurab Dhakal &#169; 2024</div>
 </body>
-<script src="./JS/index._main.js" type="text/javascript"></script>
-<script src="./JS/calcv3.js"></script>
 </html>
